fixed issue: headline image id hidden on mobile but the other images in the postDescription are still there. div .headline-image now wraps the p tag, css display none !important

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -607,13 +607,12 @@ textarea, input, .form-control {
 
 .postDescription > p > img {
     /*margin: 0 auto;*/
-    /*display: flex;*/
+    display: flex;
     /*margin-top: 0.25em;*/
     /*margin-bottom: 0.25em;*/
 }
 
 .sidebar-image > p > img {
-    max-width: 100px;
     max-width: 100px;
 }
 
